used java 17 list collectors