@@ -2,13 +2,11 @@ package org.geekhub.doctorsregistry.domain.appointment.appointmenttime;
 
 import org.springframework.stereotype.Service;
 
-import javax.annotation.PostConstruct;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class AppointmentTime {
@@ -38,8 +36,7 @@ public class AppointmentTime {
 
     public List<LocalTime> getSupportedTimes() {
         return new ArrayList<>(availableTime).stream()
-            .sorted()
-            .collect(Collectors.toList());
+            .sorted().toList();
     }
 
 }
